# Branching_Time_Active_Inference

./: .gitignore  CMakeLists.txt
cmake/: LinkLibTorchToTarget.cmake
mazes/: 14.maze
srcs/: main.cpp  main_test.cpp
srcs/algorithms/: BayesianFiltering.cpp  BayesianFiltering.h  MCTS.cpp  MCTS.h
srcs/algorithms/configurations/: ConfigMCTS.cpp  ConfigMCTS.h
srcs/environments/: DisentangleSpritesEnv.cpp  DisentangleSpritesEnv.h  EnvType.h  Environment.h  GraphEnv.cpp  GraphEnv.h  MazeEnv.cpp  MazeEnv.h
srcs/experiments/: GraphPerformanceTracker.cpp  GraphPerformanceTracker.h  MazePerformanceTracker.cpp  MazePerformanceTracker.h  PerformanceTracker.h  SpritesPerformanceTracker.cpp  SpritesPerformanceTracker.h  TimeTracker.cpp  TimeTracker.h
srcs/graphs/: GraphViz.cpp  GraphViz.h  TreeNode.cpp  TreeNode.h
srcs/graphs/data/: DataMCTS.cpp  DataMCTS.h
srcs/wrappers/: Torch.cpp  Torch.h
srcs/zoo/: BTAI.cpp  BTAI.h
